# mock_mozilla

./: .gitignore  Makefile.am  configure.ac  master.cfg  mock_mozilla.spec.in  poc.sh  test.sh
etc/bash_completion.d/: mock_mozilla.bash
etc/consolehelper/: mock_mozilla
etc/mock_mozilla/: b2g.cfg  fedora-15-x86_64-mozilla.cfg  mozilla-f15-x86_64.cfg  mozilla-f16-x86_64.cfg  site-defaults.cfg
etc/pam/: mock_mozilla
py/: mock_mozilla.py
py/mock_mozilla/: backend.py  scm.py  uid.py  util.py
py/mock_mozilla/plugins/: bind_mount.py  ccache.py  root_cache.py  selinux.py  tmpfs.py  yum_cache.py
tests/: runtests.sh
